k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.image-pull-secret: regcred
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
        kompose.image-pull-secret: regcred
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/kitapkurdu-default: "true"
        io.kompose.service: backend
    spec:
      containers:
        - env:
            - name: JWT_SECRET
              valueFrom:
                configMapKeyRef:
                  key: JWT_SECRET
                  name: backend--env
            - name: MONGO_URI
              valueFrom:
                configMapKeyRef:
                  key: MONGO_URI
                  name: backend--env
            - name: PORT
              valueFrom:
                configMapKeyRef:
                  key: PORT
                  name: backend--env
          image: sayinmehmet47/backend-kitapkurdu-1:latest
          name: backend
          ports:
            - containerPort: 5000
          resources: {}
          volumeMounts:
            - mountPath: /var/www/app
              name: backend-claim0
            - mountPath: /usr/app/node_modules
              name: backend-claim1
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
      volumes:
        - name: backend-claim0
          persistentVolumeClaim:
            claimName: backend-claim0
        - name: backend-claim1
          persistentVolumeClaim:
            claimName: backend-claim1
status: {}
