k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.image-pull-secret: regcred
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: client
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: client
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
        kompose.image-pull-secret: regcred
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/kitapkurdu-default: "true"
        io.kompose.service: client
    spec:
      containers:
        - env:
            - name: REACT_APP_LOCAL_API
              valueFrom:
                configMapKeyRef:
                  key: REACT_APP_LOCAL_API
                  name: client--env
          image: sayinmehmet47/client-kitapkurdu-1:latest
          name: client
          ports:
            - containerPort: 3000
          resources: {}
          volumeMounts:
            - mountPath: /usr/app
              name: client-claim0
            - mountPath: /usr/app/node_modules
              name: client-claim1
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
      volumes:
        - name: client-claim0
          persistentVolumeClaim:
            claimName: client-claim0
        - name: client-claim1
          persistentVolumeClaim:
            claimName: client-claim1
status: {}
